nadir (0.3-1) unstable; urgency=low

  * Key mode bug fixed when context menu is shown.
    XGrabKey replaced by XQueryKeyMap.
    Code taken from xspy (Jon A. Maxwell <jmaxwell@acm.vt.edu>)
  * Nadir is now able to work along with a virtual keyboard
  * Qt dialog translation 
  * User may change key 

 -- Juan Roldan Ruiz <juan@shoden.es>  Fri, 04 Nov 2011 18:43:42 +0100

nadir (0.2-1) unstable; urgency=low

  * Fixed Compiz error
  * Hidden version in configuration window 
  * Configuration window header removed
  * Window icon 
  * System tray icon 
  * .gitignore file
  * .pro file for Qt Creator 
  * minimized | hidden start option

 -- Juan Roldan Ruiz <juan.roldan@gmail.com>  Mon, 07 Mar 2011 18:23:10 +0100

nadir (0.1-1) unstable; urgency=low

  * CMake configuration files
  * debian directory

 -- Juan Roldan Ruiz <juan.roldan@gmail.com>  Fri, 04 Mar 2011 19:44:29 +0100

nadir (0.1-alpha4) unstable; urgency=low

  * Improved keyboard grabber
  * Fixed focus problem

 -- Juan Roldan Ruiz <juan.roldan@gmail.com>  Fri, 02 Feb 2010 22:21:34 +0100


nadir (0.1-alpha3) unstable; urgency=low

  * Changing among modes is performed correctly.
  * Scape key works in any mode
  * Pointer can be hidden in any mode
  * Mic configuration is disabled if mic mode isn't enabled.
  * Waiting time can be set dinamically in mic mode.
  * Single, double and right click seem to work in KDE
  * Minor changes

 -- Juan Roldan Ruiz <juan.roldan@gmail.com>  Fri, 12 Nov 2009 13:00:39 +0100

nadir (0.1-alpha2) unstable; urgency=low

  * User can set scanning parameters with a configuration widget.
  * Settings are stored in config file.
  * Xevie extension has been replaced with Xlib.
  * Achieved Microphone mode.
  * Enabled more mouse events.
  * Added option to start the application minimized.
  * Added option to hide pointer after mouse event.
  * Default mouse event can be set to single or double click.
